# potluck-rs

./: .gitignore  Cargo.toml  README.md  docker-compose.yml
migration/: Cargo.toml
migration/src/: iden.rs  lib.rs  m20220101_000001_create_table.rs  m20250405_153121_user_table.rs  m20250715_040011_add_pairing_history_table.rs
src/: config.rs  database.rs  main.rs  router.rs
src/auth/: router.rs  user.rs
src/entities/: attendance.rs  household.rs  mod.rs  organization.rs  pairing_history.rs  person.rs  potluck.rs  potluck_series.rs  prelude.rs  sea_orm_active_enums.rs  user.rs
src/pco/: household.rs  mod.rs  person.rs
src/routes/: api.rs  dashboard.rs  me.rs  mod.rs  people.rs  search.rs
src/util/: asset_loader.rs
static/css/: style.css  tailwind.css
static/js/: theme.js
templates/: _household_card.html  _navbar.html  _people_list.html  _person_card.html  base.html  dashboard.html  index.html  login.html  me.html  people.html  people_table_rows.html  search.html
