[package]
name = "potluck-rs"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.97"
async-session = "3.0.0"
axum = "0.8.1"
axum-extra = { version = "0.10.1", features = ["typed-header"] }
dotenvy = "0.15.7"
migration = { path = "migration" }
oauth2 = "5.0.0"
reqwest = { version = "0.12.15", features = ["json"] }
sea-orm = { version = "1.1.8", features = [
    "macros",
    "runtime-tokio-native-tls",
    "sqlx-postgres",
] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
tokio = { version = "1.44.1", features = ["full"] }
tower-http = { version = "0.6.2", features = ["fs", "cors", "trace"] }
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
