[package]
name = "potluck-rs"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.97"
async-session = "3.0.0"
axum = "0.8.1"
axum-extra = { version = "0.10.1", features = ["typed-header"] }
axum-login = "0.17.0"
chrono = "0.4.40"
dotenvy = "0.15.7"
migration = { path = "migration" }
minijinja = { version = "2.10.2", features = ["loader", "urlencode"] }
oauth2 = "5.0.0"
reqwest = { version = "0.12.15", features = ["json"] }
sea-orm = { version = "1.1.8", features = ["macros", "runtime-tokio-native-tls", "sqlx-postgres"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
thiserror = "2.0.12"
tokio = { version = "1.44.1", features = ["full"] }
tower-http = { version = "0.6.2", features = ["fs", "cors", "trace"] }
tower-sessions-sqlx-store = { version = "0.15.0", features = ["postgres"] }
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
uuid = { version = "1.16.0", features = ["v4"] }
percent-encoding = "2.3"
sha2 = "0.10.9"
